--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -63,6 +63,22 @@ steps:
     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782,GOOGLE_CLOUD_PROJECT_ID=trading-436516
     waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
 
+  # Step 4b: Deploy the monthly_invest_all ORCHESTRATOR (runs all 3 monthly strategies)
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - monthly_invest_all  # Orchestrator function for coordinated monthly investing
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=monthly_invest_all  # Entry point function in your Python code
+    - --memory=512MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782,GOOGLE_CLOUD_PROJECT_ID=trading-436516
+    waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
+
   # Step 5: Deploy the quarterly_nine_sig_signal
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
@@ -112,17 +128,26 @@ steps:
     waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
 
 
-# Create Cloud Scheduler job for 'monthly_buy_hfea' function
+# Create Cloud Scheduler job for 'monthly_invest_all' ORCHESTRATOR (runs all 3 monthly strategies)
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'monthly_buy_hfea',
-      '--schedule', '0 12 1-7 * *',  
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_hfea',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-    ]
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        gcloud scheduler jobs update http monthly_invest_all \
+          --schedule='0 12 1-7 * *' \
+          --uri='https://europe-west3-trading-436516.cloudfunctions.net/monthly_invest_all' \
+          --http-method='POST' \
+          --time-zone='America/New_York' \
+          --location='europe-west3' \
+          --oidc-service-account-email='1098661711782-compute@developer.gserviceaccount.com' \
+        || gcloud scheduler jobs create http monthly_invest_all \
+          --schedule='0 12 1-7 * *' \
+          --uri='https://europe-west3-trading-436516.cloudfunctions.net/monthly_invest_all' \
+          --http-method='POST' \
+          --time-zone='America/New_York' \
+          --location='europe-west3' \
+          --oidc-service-account-email='1098661711782-compute@developer.gserviceaccount.com'
     waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
 
   # Create Cloud Scheduler job for 'rebalance_hfea' function
@@ -138,31 +163,9 @@ steps:
     ]
     waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
 
-  # Create Cloud Scheduler job for 'monthly_buy_spxl' function
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'monthly_buy_spxl',
-      '--schedule', '0 12 1-7 * *',  
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_spxl',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-    ]
-    waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
-
-  # Create Cloud Scheduler job for 'monthly_nine_sig_contributions' function
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'monthly_nine_sig_contributions',
-      '--schedule', '0 12 1-7 * *',  
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_nine_sig_contributions',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-    ]
-    waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
+  # NOTE: monthly_buy_spxl, monthly_nine_sig_contributions, and monthly_buy_hfea schedulers
+  # have been REPLACED by the monthly_invest_all orchestrator for coordinated budget management.
+  # The individual functions are still deployed for manual/debugging use but not scheduled.
 
   # Create Cloud Scheduler job for 'quarterly_nine_sig_signal' function
   - name: 'gcr.io/cloud-builders/gcloud'
