Refactor market data handling to use Alpaca API
- Replaced yfinance with Alpaca for fetching market data, including historical prices and SMA calculations.
- Updated Firestore caching logic to unify market data storage under a single collection.
- Enhanced functions to calculate 200-day and 255-day SMAs using Alpaca data, with error handling for insufficient data.
- Adjusted README.md to reflect changes in data sources and updated terminology from S&P 500 Index to SPY.
- Removed yfinance dependency from requirements.txt and added pandas for data manipulation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ functions-framework==3.*
 Flask==2.3.2  # For handling HTTP requests in Cloud Functions
 google-cloud-secret-manager==2.7.2
 python-dotenv==1.0.0
-yfinance==0.2.61
 requests
 pandas-market-calendars
 google-cloud-firestore
+pandas  # For SMA calculations from Alpaca data
