--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -227,17 +227,29 @@ steps:
     ]
     waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
 
-  # Create Cloud Scheduler job for 'rebalance_golden_hfea_lite' function
+  # Create Cloud Scheduler job for 'rebalance_golden_hfea_lite' function (try update first, then create if needed)
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'scheduler', 'jobs', 'update', 'http', 'rebalance_golden_hfea_lite',
-      '--schedule', '0 14 1-7 1,4,7,10 *',  
-      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/rebalance_golden_hfea_lite',
-      '--http-method', 'POST',
-      '--time-zone', 'America/New_York',
-      '--location', 'europe-west3',
-      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-    ]
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        if gcloud scheduler jobs describe rebalance_golden_hfea_lite --location=europe-west3 >/dev/null 2>&1; then
+          gcloud scheduler jobs update http rebalance_golden_hfea_lite \
+            --schedule='0 14 1-7 1,4,7,10 *' \
+            --uri='https://europe-west3-trading-436516.cloudfunctions.net/rebalance_golden_hfea_lite' \
+            --http-method='POST' \
+            --time-zone='America/New_York' \
+            --location='europe-west3' \
+            --oidc-service-account-email='1098661711782-compute@developer.gserviceaccount.com'
+        else
+          gcloud scheduler jobs create http rebalance_golden_hfea_lite \
+            --schedule='0 14 1-7 1,4,7,10 *' \
+            --uri='https://europe-west3-trading-436516.cloudfunctions.net/rebalance_golden_hfea_lite' \
+            --http-method='POST' \
+            --time-zone='America/New_York' \
+            --location='europe-west3' \
+            --oidc-service-account-email='1098661711782-compute@developer.gserviceaccount.com'
+        fi
     waitFor: ['-'] # start in parallel and actually needs to be set, otherwise deployment is sequential
 
   # NOTE: monthly_buy_spxl, monthly_nine_sig_contributions, monthly_buy_hfea, and monthly_dual_momentum schedulers
